--- a/afl-persistent.opam
+++ b/afl-persistent.opam
@@ -5,31 +5,26 @@ homepage: "https://github.com/stedolan/ocaml-afl-persistent"
 bug-reports: "https://github.com/stedolan/ocaml-afl-persistent/issues"
 dev-repo: "git+https://github.com/stedolan/ocaml-afl-persistent.git"
 license: "MIT"
-build: [[ "./build.sh" ]]
+build: [
+  [ "dune" "build" "-p" name "-j" jobs ]
+  [ "./config.sh" ]
+]
 depends: [
-  "ocaml" {>= "4.00"}
+  "ocaml" {>= "4.05"}
+  "dune" {>= "2.9"}
   "base-unix"
 ]
 post-messages: [
-"afl-persistent is installed, but since AFL instrumentation is not available
-with this OCaml compiler, instrumented fuzzing with afl-fuzz won't work.
-
-To use instrumented fuzzing, switch to an OCaml version supporting AFL, such
-as 4.07.1+afl." {success & !afl-available}
-
 "afl-persistent is installed, but since the current OCaml compiler does
 not enable AFL instrumentation by default, most packages will not be
 instrumented and fuzzing with afl-fuzz may not be effective.
 
-To globally enable AFL instrumentation, use an OCaml switch such as
-4.07.1+afl." {success & afl-available & !afl-always}
+To globally enable AFL instrumentation, create an OCaml switch like:
+
+  opam switch create %{ocaml:version}%+afl ocaml-variants.%{ocaml:version}%+options ocaml-option-afl" {success & afl-available & !afl-always}
 ]
 synopsis: "Use afl-fuzz in persistent mode"
 description: """
 afl-fuzz normally works by repeatedly fork()ing the program being
 tested. using this package, you can run afl-fuzz in 'persistent mode',
 which avoids repeated forking and is much faster."""
-url {
-  src: "https://github.com/stedolan/ocaml-afl-persistent/archive/v1.3.tar.gz"
-  checksum: "md5=613ae369149ae8e2942e3c8bddd6798b"
-}
